--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
         "babel-jest": "^24.9.0",
         "glob": "^7.1.4",
         "html-minifier": "^4.0.0",
-        "jest": "^24.9.0",
+        "jest": "^27.4.3",
         "mkdirp": "^0.5.1",
-        "rollup": "^1.23.0",
+        "rollup": "^2.61.0",
         "rollup-plugin-terser": "^7.0.2"
     },
     "dependencies": {
-        "crs-binding": "0.0.220",
-        "crs-modules": "^1.0.11",
+        "crs-binding": "^0.0.246",
+        "crs-modules": "^1.0.17",
+        "crs-process-api": "^0.0.26",
         "crs-router": "^0.0.75"
     }
 }
